# pytosdr

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yaml
