[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytosdr"
version = "1.0.0"
authors = [
  { name="José María Cruz Lorite", email="josemariacruzlorite@gmail.com" },
]
description = "PyToS;DR is a Python package that simplifies accessing and interpreting Terms of Service and Privacy Policies, drawing directly from the ToS;DR GitHub repository"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "GitPython",
    "platformdirs"
]

[project.urls]
Homepage = "https://github.com/cruzlorite/pytosdr"

